--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -12,14 +12,25 @@
    "metadata": {},
    "source": [
     "## Table of Contents\n",
-    "#### [The Shared Computer Cluster (SCC)](#The-Shared-Computing-Cluster-(SCC))"
+    "- [The Shared Computer Cluster (SCC)](#'scc')\n",
+    "- [Vanilla Python](#'python')\n",
+    "- [Packages](#packages)\n",
+    "    - [NumPy](#numpy)\n",
+    "    - [datascience](#datascience)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **The Shared Computing Cluster (SCC)**\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **The Shared Computing Cluster (SCC)** <a id='scc'></a>\n",
     "\n",
     "The SCC is what all students in DS-100 will be using to run the files required for their assignments. It is a diverse Linux cluster of numerous components including over 9,000 shared CPU cores, 250 GPU cores and 1 petabyte of storage. The SCC is mainly used for tasks that require high-performance computing from disciplines such as engineering, biostatistics, and machine learning. \n"
    ]
@@ -40,7 +51,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **General Python**"
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Python** <a id='python'></a>"
    ]
   },
   {
@@ -66,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +137,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Assignment Statements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
@@ -131,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +172,20 @@
        "(int, float)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(x_int), type(x_float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
@@ -160,19 +199,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Importing packages**"
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Package: NumPy**"
+    "## **Importing packages** <a id='packages'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Package: NumPy** <a id='numpy'></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +243,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### np.arange"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
@@ -204,12 +271,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Package: datascience**"
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Package: datascience** <a id='datascience'></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +301,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Creating a table**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
@@ -263,6 +351,13 @@
    "metadata": {},
    "source": [
     "#### t.where(label, condition)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   }
  ],
