Finished some parts, working on wrapping up Lecture #3

--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -23,13 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "## **The Shared Computing Cluster (SCC)** <a id='scc'></a>\n",
     "\n",
     "The SCC is what all students in DS-100 will be using to run the files required for their assignments. It is a diverse Linux cluster of numerous components including over 9,000 shared CPU cores, 250 GPU cores and 1 petabyte of storage. The SCC is mainly used for tasks that require high-performance computing from disciplines such as engineering, biostatistics, and machine learning. \n"
@@ -51,13 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "## **Python** <a id='python'></a>"
    ]
   },
@@ -65,6 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "### **Data Types**"
    ]
   },
@@ -72,19 +61,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Int (integer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Int (integer) (Lec #4)\n",
+    "\n",
     "Ints in Python can be an integer of any size. Additionally, it never has a decimal point."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,19 +79,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Float (int w/ decimal point)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Float (int w/ decimal point) (Lec #4)\n",
+    "\n",
     "Floats always have a decimal point, but they have an optional fractional part. They also have a limited size and precision of 15-16 decimal places. Floats **can be wrong** in the final few decimal places after arithmetic (due to how they are stored in memory, see __[here](https://stackoverflow.com/questions/21895756/why-are-floating-point-numbers-inaccurate)__)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,204 +97,298 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Str (Strings & text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Arrays"
+    "#### Str (Strings & text) (Lec #4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
+    "#### Arrays/Lists "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment Statements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using Functions"
+    "\n",
+    "### **Assignment Statements** (Lec #3)\n",
+    "\n",
+    "Assignment statements, denoted by a *single* =, are a type of statement that binds a variable to a value. Additionally, variable names are *case-sensitive* (i.e. 'A' is not equal to 'a')."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'list'>\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "hw_due_date = 'On Thursday'\n",
+    "print(type(hw_due_date))\n",
+    "\n",
+    "# The value and type can be overwritten\n",
+    "\n",
+    "hw_due_date = ['On Thursday']\n",
+    "print(type(hw_due_date))\n",
+    "\n",
+    "a = 0\n",
+    "A = 1\n",
+    "print(a == A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Using Functions** (Lec #3)\n",
+    "\n",
+    "A function is a block of code that will run whenever it is called. The variable listed inside of the parentheses are paramters, while the actual value that is sent to the function are arguments. Additionally, some functions can take *multiple* arguments (i.e. np.array(), max(), min(), etc)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# From Lec #4\n",
+    "# type() is a function, while x_int and x_float are parameters in this case\n",
+    "# print() is also a function, and it can take more than one argument\n",
+    "\n",
+    "print(type(x_int), type(x_float))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is also possible to daisy-chain functions together. In the example below, lower() makes all the letters into lower case, while replace() replaces *all* instances of 'han' with 'c'.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ethan Chang\n",
+      "etc ccg\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Ethan Chang'\n",
+    "weird_name = name.lower().replace('han', 'c')\n",
+    "print(name)\n",
+    "print(weird_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Conversions** (Lec #4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## **Importing packages** <a id='packages'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from datascience import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## **Package: NumPy** <a id='numpy'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **NumPy Functions**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### np.array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### np.arange"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### np.diff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## **Package: datascience** <a id='datascience'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Creating a table**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
       "text/plain": [
-       "(int, float)"
+       "Label | Course Assistants | Major\n",
+       "Row 1 | Ethan Chang       | Data Science\n",
+       "Row 2 | ?                 | N/A\n",
+       "Row 3 | ?                 | N/A\n",
+       "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(x_int), type(x_float)"
+    "ca_table = Table().with_columns(\n",
+    "    'Label', ['Row 1', 'Row 2', 'Row 3', 'Row 4'],\n",
+    "    'Course Assistants', ['Ethan Chang', '?', '?', '?'],\n",
+    "    'Major', ['Data Science', 'N/A', 'N/A', 'N/A']\n",
+    ")\n",
+    "\n",
+    "ca_table"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Conversions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Importing packages** <a id='packages'></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Package: NumPy** <a id='numpy'></a>"
+    "### **Table Structure** (Lec #3)\n",
+    "\n",
+    "If you run the code cell below, you will see a table with 4 rows and 3 columns. The name of a column (also known as a label) will always be at the top, and the entries for the table will be below it. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Label | Course Assistants | Major\n",
+       "Row 1 | Ethan Chang       | Data Science\n",
+       "Row 2 | ?                 | N/A\n",
+       "Row 3 | ?                 | N/A\n",
+       "Row 4 | ?                 | N/A"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### np.array"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### np.arange"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### np.diff"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Package: datascience** <a id='datascience'></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import datascience"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Table Structure**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Creating a table**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
+    "ca_table"
    ]
   },
   {
@@ -329,36 +402,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.select(label)"
+    "#### t.select(label) (Lec #3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.drop(label)"
+    "#### t.drop(label) (Lec #3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.sort(label)"
+    "#### t.sort(label) (Lec #3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.where(label, condition)"
+    "#### t.where(label, condition) (Lec #3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "***"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -377,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
