Caught up to Lec #3

--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -12,11 +12,12 @@
    "metadata": {},
    "source": [
     "## Table of Contents\n",
-    "- [The Shared Computer Cluster (SCC)](#'scc')\n",
-    "- [Vanilla Python](#'python')\n",
+    "- [The Shared Computer Cluster (SCC)](#scc)\n",
+    "- [Vanilla Python](#python)\n",
     "- [Packages](#packages)\n",
     "    - [NumPy](#numpy)\n",
-    "    - [datascience](#datascience)"
+    "    - [datascience](#datascience)\n",
+    "- [GitHub](#github)"
    ]
   },
   {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +321,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +383,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,28 +403,498 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.select(label) (Lec #3)"
+    "#### t.select(*column_or_columns*) (Lec #3)\n",
+    "The select function from the datascience package allows you to select specific rows in a table. You can specify either one column or multiple using the column names (in string format) or the index of the column (with an int).\n",
+    "\n",
+    "'.select()' can *only* be used on a table, and it returns a *new* table with the specified columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Course Assistants</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Ethan Chang      </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# single column selected\n",
+    "ca_select = ca_table.select('Course Assistants')\n",
+    "ca_select.show()\n",
+    "\n",
+    "# two columns selected, the first instance of ca_select is being overwritten\n",
+    "ca_select = ca_table.select('Label', 'Major')\n",
+    "ca_select.show()\n",
+    "\n",
+    "# selecting columns from the previous table (you should not need to do this)\n",
+    "ca_select = ca_select.select('Label')\n",
+    "ca_select.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.drop(label) (Lec #3)"
+    "#### t.drop(*column_or_columns*) (Lec #3)\n",
+    "\n",
+    "As the name suggests, 'drop' will *remove* or drop the column(s). You can use either the column name or index to specify which columns you want to remove. Additionally, 'drop' will return a *new* table.\n",
+    "\n",
+    "*Instead of selecting multiple columns just to exclude one, simply drop the column instead.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Course Assistants</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Ethan Chang      </td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Course Assistants</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Ethan Chang      </td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ca_copy = ca_table.copy()\n",
+    "ca_copy.show()\n",
+    "\n",
+    "ca_drop = ca_copy.drop('Label')\n",
+    "ca_drop.show()\n",
+    "\n",
+    "# try to not do this, it gets difficult if your columns have long names\n",
+    "ca_copy.select('Course Assistants', 'Major').show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.sort(label) (Lec #3)"
+    "#### t.sort(*column_or_label, descending=False, distinct=False*) (Lec #3)\n",
+    "\n",
+    "'sort' will return a *new* table with the rows sorted according to the values in a column. Unless specified, 'sort' will always sort in ascending order, while also keeping non-unique values. Setting 'descending' to true will sort in descending order, and setting 'distinct' to true will remove non-unique values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A         </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ca_sort = ca_table.copy()\n",
+    "\n",
+    "# sorting in descending order, see how the Row # starts with 4 then goes to 1\n",
+    "ca_sort.sort('Label', descending=True).show()\n",
+    "\n",
+    "# sorting while removing non-unique values, all but one row with '?' is gone\n",
+    "ca_sort.sort('Course Assistants', distinct=True).show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.where(label, condition) (Lec #3)"
+    "#### t.where(*column_or_label, value_or_predicate=None, other=None*) (Lec #3)\n",
+    "\n",
+    "'where' takes in up to three arguments: \n",
+    "- the first one being a column of the table as either a label/name (str) or an index (int)\n",
+    "- the second being a function that is applied to every value in the specified column and keeps values that are True, or if value_or_predicate is a single value, only rows that are equal to the value in the specified column are kept\n",
+    "- the third being an optional label to make pairwise comparisons\n",
+    "\n",
+    "There are a variety of predicates that can be used [here](http://data8.org/datascience/predicates.html?highlight=#datascience.predicates.are) is a list of all of them with examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th> <th>Extra</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A         </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>?                </td> <td>N/A         </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>?                </td> <td>N/A         </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th> <th>Extra</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td> <td>?    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th> <th>Extra</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A  </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>?                </td> <td>N/A  </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>?                </td> <td>N/A  </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Label</th> <th>Course Assistants</th> <th>Major</th> <th>Extra</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Row 1</td> <td>Ethan Chang      </td> <td>Data Science</td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 2</td> <td>?                </td> <td>N/A         </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 3</td> <td>?                </td> <td>N/A         </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Row 4</td> <td>?                </td> <td>N/A         </td> <td>?    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ca_where = ca_table.with_columns(\n",
+    "    'Extra', ['?' for i in range(4)]\n",
+    ")\n",
+    "\n",
+    "ca_where.show()\n",
+    "\n",
+    "\n",
+    "# shows rows in the table where there is a '?' in the 'Course Assistants' column\n",
+    "# where(column, value) is what is being used\n",
+    "ca_where.where('Course Assistants', 'Ethan Chang').show()\n",
+    "\n",
+    "# shows rows in the table where values in 'Course Assistants' are equal to 'Extra'\n",
+    "# where(column, predicate, column) is being used, are.equal_to is a predicate\n",
+    "ca_where.where('Course Assistants', are.equal_to, 'Extra').show()\n",
+    "\n",
+    "# shows rows in the table where values in 'Extra' are equal to '?' (which is all values)\n",
+    "# where(column, predicate) is being used here\n",
+    "# this is similar to the first example with 'Ethan Chang', but this one uses are.equal_to()\n",
+    "ca_where.where('Extra', are.equal_to('?')).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **GitHub** <a id='github'></a>"
    ]
   },
   {
